<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/name"
        android:inputType="text"
        android:maxLines="1"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:padding="8dp"/>

    <EditText
        android:id="@+id/editTextPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:maxLines="1"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:padding="8dp"/>

    <EditText
        android:id="@+id/editTextShippingAddress"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/shipping_address"
        android:inputType="text"
        android:maxLines="2"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:padding="8dp"/>

</LinearLayout>
